--- a/project_root/lambdas/api_node/package.json
+++ b/project_root/lambdas/api_node/package.json
@@ -7,6 +7,7 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "jest": "^30.2.0",
     "nodemon": "^3.1.10",
     "serverless-domain-manager": "^8.0.0"
   }
